fix(ui5-li-notification-group): correct collapse button shape on Compact mode (#8166)
The button should not chanage its shape when clicked.

Fixes #8059

--- a/packages/fiori/src/themes/NotificationListGroupItem.css
+++ b/packages/fiori/src/themes/NotificationListGroupItem.css
@@ -5,10 +5,6 @@
 	--_ui5-notification_item-border-raius: 0px;
 }
 
-:host(:not([collapsed])) .ui5-nli-group-toggle-btn {
-	transform: var(--_ui5_li_notification_group_toggle_btn_rotation);
-}
-
 :host([collapsed]) .ui5-nli-group-items {
 	display: none;
 }
